fix: risposte casuali e gestione tempo
